Fixed menu being covered by search bar

--- a/app/assets/stylesheets/woople-theme/base.css.less
+++ b/app/assets/stylesheets/woople-theme/base.css.less
@@ -58,6 +58,14 @@ a:hover {
     }
   }
 
+  #body-container {
+    position:relative;
+    top:0;
+    left:0;
+    width:100%;
+    float: left;
+  }
+
   body {
     padding:0;
   }
